# faviconer

./: .gitignore  Makefile  README.md  README.rst  requirements.txt  setup.cfg
.circleci/: config.yml
src/faviconer/: __init__.py  main.py
src/tests/: test_main.py
