[metadata]
name = faviconer
version = attr:faviconer.__version__
author = kuniiskywalker
author_email = kuniiskywalker@gmail.com
description = faviconer is easy for get favicon package
long_description = file:README.rst
url = https://github.com/kuniiskywalker/faviconer
include_package_data=True
zip_safe=False
license = Apache License, Version 2.0
classifier =
    Development Status :: 1 - Planning
    Programming Language :: Python
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
test_suite='tests'

[options]
zip_safe = False
;packages = find:

;include_package_data = True
package_dir == src
packages = faviconer

install_requires =
    beautifulsoup4==4.6.0
    requests==2.32.2

